# IoTClaw-Senior-Design-2025-26

./: LICENSE  README.md
backend/: messagenotes.txt
backend/ClawServer/: ActiveGames.go  Address.go  Client.go  DatabaseManager.go  GoogleUser.go  Hub.go  JWT.go  Queue.go  README.md  ReportError.go  Server.go  UserData.go  UserPrize.go  UserTokenData.go  go.sum  main.go  packet.go
frontend/: App.tsx  FIX_ACCESS_PROBLEM.md  GOOGLE_AUTH_SETUP.md  GOOGLE_CLIENT_IDS.md  README.md  app.json  app.plugin.js  package-lock.json  package.json
frontend/Clawser/: App.tsx  README.md  app.json  app.plugin.js  eas.json  package-lock.json  package.json
frontend/app/: _layout.tsx  dashboard.tsx  game.tsx  index.tsx  register.tsx  result.tsx  settings.tsx  signin.tsx
frontend/components/: AnimatedBackground.tsx  Background.tsx  BottomNavBar.tsx  Button.tsx  HeaderBar.tsx  HomeScreen.tsx  Input.tsx  LoginScreen.tsx  Polaroid.tsx  ProfileScreen.tsx  Routes.tsx  ScreenHeader.tsx  ShopButton.tsx  ShopScreen.tsx
frontend/constants/: theme.ts
frontend/data/: mockPrizes.tsx
frontend/hooks/: useAnimations.ts
frontend/services/: AuthService.ts
frontend/stores/: AuthStore.ts  UserDataStore.ts
fullStackLatencyExample/: .gitignore  README.md
fullStackLatencyExample/ClawCabinent/: README.md  main.go
hardware/: README.md
hardware/PC Client/cabinet-client/: README.md  dropClawAndDetect.py  main.py  moveClaw.py  obsmanager.py  pyproject.toml  toggleCamera.py
hardware/cabinet-client/: .gitignore  dropClawAndDetect.py  main.py  moveClaw.py  pyproject.toml  testing_socket.py
(+77 files in other folders)
