[project]
name = "cabinet-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "numpy>=2.4.3",
    "obs-websocket-py>=1.0",
    "opencv-python>=4.13.0.92",
    "pyserial>=3.5",
    "requests>=2.32.5",
    "websockets>=16.0",
]
